Tests/CompilerTests/negative/ambiguous-overload.hylo
//! no-std

struct A {}
struct B {}

fun f(x: A) {}
fun f(x: B) {}

fun g() {
  f(x: ())
}
