Tests/CompilerTests/negative/ambiguous-overload.expected
negative/ambiguous-overload.hylo:8.3-4: error: ambiguous use of 'f'
  f(x: ())
  ^
negative/ambiguous-overload.hylo:8.8-10: error: cannot pass value of type 'Void' to parameter 'let A'
  f(x: ())
       ~~
